UIEXT-2923: Adjust registered operators validation to handle deprecated operators
UIEXT-2923 (Use dynamic parameters in the RowFilter)